--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jasmine": "^4.3.2",
+    "@types/morgan": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "jasmine": "^5.0.1",
     "jasmine-spec-reporter": "^7.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
   },
