--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "start": "node dist/index.js",
     "predev": "npm run build",
     "dev": "concurrently \"npx tsc -w\"  \" nodemon dist/index.js\" ",
-    "jasmine": "jasmine",
+    "jasmine": "jasmine --config=src/spec/support/jasmine.json",
     "test": "npm run build && npm run jasmine"
   },
   "author": "Moustafa Mahmoud",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "^4.3.2",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "@types/supertest": "^2.0.12",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "jasmine": "^5.0.1",
@@ -35,6 +36,7 @@
     "@types/node": "^20.3.0",
     "bcrypt": "^5.1.0",
     "concurrently": "^8.2.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
