--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "predev": "npm run build",
-    "dev": "concurrently \"npx tsc -w\"  \" nodemon dist/index.js\" ",
+    "dev": "concurrently \"npx tsc -w\"  \" nodemon dist/src/index.js\" ",
     "jasmine": "jasmine --config=src/spec/support/jasmine.json",
     "test": "npm run build && npm run jasmine"
   },
@@ -22,6 +22,9 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/pino": "^6.3.11",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "jasmine": "^5.0.1",
@@ -43,6 +46,11 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "qs": "^6.11.2",
+    "pino": "^7.0.2",
+    "pino-pretty": "^7.1.0",
+    "dayjs": "^1.10.7",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3"
   }
